glxgears segfaults on POWER / Xvnc
Submitted by hug..@..il.com
Assigned to mes..@..op.org
Description
to reproduce:
EXPORT display=:5 Xvnc :5 -screen 0 800x600x24 & glxgears Segmentation fault
gdb glxgears
...
Program received signal SIGSEGV, Segmentation fault.
0x7c0802a6f8010010 in ?? ()
(gdb) bt
#0 0x7c0802a6f8010010 in ?? ()
#1 0x00000fffb7cd1454 in ?? () from /usr/lib64/dri/swrast_dri.so
#2 0x00000fffb7cd1588 in ?? () from /usr/lib64/dri/swrast_dri.so
#3 0x00000fffb7c61d58 in ?? () from /usr/lib64/dri/swrast_dri.so
#4 0x00000fffb7c5cc2c in ?? () from /usr/lib64/dri/swrast_dri.so
#5 0x00000fffb7c5d098 in ?? () from /usr/lib64/dri/swrast_dri.so
#6 0x00000fffb7a6968c in ?? () from /usr/lib64/dri/swrast_dri.so
#7 0x00000fffb7b39428 in ?? () from /usr/lib64/dri/swrast_dri.so
#8 0x00000fffb7c15b08 in ?? () from /usr/lib64/dri/swrast_dri.so
#9 0x00000fffb7a8f930 in ?? () from /usr/lib64/dri/swrast_dri.so
#10 0x00000fffb7a94024 in ?? () from /usr/lib64/dri/swrast_dri.so
#11 0x000000806c10e998 in .glCallList () from /usr/lib64/libGL.so.1
#12 0x0000000010002b54 in ?? ()
#13 0x000000001000201c in ?? ()
#14 0x000000806b3e1fa8 in .generic_start_main.isra.0 () from /lib64/libc.so.6
#15 0x000000806b3e219c in .__libc_start_main () from /lib64/libc.so.6
#16 0x0000000000000000 in ?? ()
glxinfo
name of display: :5 display: :5 screen: 0 direct rendering: Yes server glx vendor string: SGI server glx version string: 1.4 server glx extensions: GLX_ARB_multisample, GLX_EXT_visual_info, GLX_EXT_visual_rating, GLX_EXT_import_context, GLX_EXT_texture_from_pixmap, GLX_OML_swap_method, GLX_SGI_make_current_read, GLX_SGIS_multisample, GLX_SGIX_fbconfig, GLX_SGIX_pbuffer, GLX_MESA_copy_sub_buffer, GLX_INTEL_swap_event client glx vendor string: Mesa Project and SGI client glx version string: 1.4 client glx extensions: GLX_ARB_get_proc_address, GLX_ARB_multisample, GLX_EXT_import_context, GLX_EXT_visual_info, GLX_EXT_visual_rating, GLX_EXT_framebuffer_sRGB, GLX_MESA_copy_sub_buffer, GLX_MESA_multithread_makecurrent, GLX_MESA_swap_control, GLX_OML_swap_method, GLX_OML_sync_control, GLX_SGI_make_current_read, GLX_SGI_swap_control, GLX_SGI_video_sync, GLX_SGIS_multisample, GLX_SGIX_fbconfig, GLX_SGIX_pbuffer, GLX_SGIX_visual_select_group, GLX_EXT_texture_from_pixmap, GLX_INTEL_swap_event GLX version: 1.4 GLX extensions: GLX_ARB_get_proc_address, GLX_ARB_multisample, GLX_EXT_import_context, GLX_EXT_visual_info, GLX_EXT_visual_rating, GLX_MESA_multithread_makecurrent, GLX_OML_swap_method, GLX_SGIS_multisample, GLX_SGIX_fbconfig, GLX_SGIX_pbuffer, GLX_INTEL_swap_event OpenGL vendor string: VMware, Inc. OpenGL renderer string: Gallium 0.4 on llvmpipe OpenGL version string: 2.1 Mesa 7.11 OpenGL shading language version string: 1.20 ...
uname -a
Linux gcc1-power7.osuosl.org 3.1.0-0.rc9.git0.2.fc16.kh.ppc64 #1 (closed) SMP Wed Oct 12 22:41:01 UTC 2011 ppc64 ppc64 ppc64 GNU/Linux
cat /etc/issue
Fedora release 16 (Verne)
another opengl program segfaults like so:
#0 0x7c0802a6f8010010 in ?? ()
#1 0x00000fffb1121454 in ?? () from /usr/lib64/dri/swrast_dri.so
#2 0x00000fffb1121588 in ?? () from /usr/lib64/dri/swrast_dri.so
#3 0x00000fffb10b1d58 in ?? () from /usr/lib64/dri/swrast_dri.so
#4 0x00000fffb10acc2c in ?? () from /usr/lib64/dri/swrast_dri.so
#5 0x00000fffb10ad098 in ?? () from /usr/lib64/dri/swrast_dri.so
#6 0x00000fffb0eb968c in ?? () from /usr/lib64/dri/swrast_dri.so
#7 0x00000fffb0f89428 in ?? () from /usr/lib64/dri/swrast_dri.so
#8 0x00000fffb0f85910 in ?? () from /usr/lib64/dri/swrast_dri.so
#9 0x00000fffb0f7ce70 in ?? () from /usr/lib64/dri/swrast_dri.so
#10 0x00000fffb0f82fd8 in ?? () from /usr/lib64/dri/swrast_dri.so
#11 0x00000fffb0f14a44 in ?? () from /usr/lib64/dri/swrast_dri.so
#12 0x000000806c1186f0 in .glPopMatrix () from /usr/lib64/libGL.so.1
. . .
Another GL program segfaults with a similar pattern.
Thank you for any help you can provide.
Version: 7.11